# agentgrind.fun

./: .gitignore  Anchor.toml  Cargo.toml  FORUM_POST.md  HACKATHON_POST.md  README.md  STATUS.md  forum-update-day2.md  treasury-devnet.json
.github/workflows/: build.yml
api/: .env.example  README.md  package-lock.json  package.json  types.ts
api/src/: index.ts
api/src/routes/: bounties.ts
app/: next.config.ts  package-lock.json  package.json  tailwind.config.js  vercel.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/(app)/: agent-demo-fab.tsx  layout.tsx  navbar.tsx  wallet-button.tsx  wallet-provider.tsx
app/app/(app)/activity/: page.tsx
app/app/(app)/bounties/: page.tsx
app/app/(app)/bounties/[creator]/[bountyId]/: page.tsx
app/app/(app)/create/: page.tsx
app/app/(app)/idl/: agentgrind.json
app/app/(app)/lib/: agentgrind-bounty.ts  agentgrind.ts  demo-mode.ts
app/app/(app)/profile/: page.tsx  x-link.ts
app/app/api/: _db.ts
app/app/api/health/: route.ts
app/app/api/metadata/: route.ts
app/app/api/metadata/batch/: route.ts
app/app/api/x/callback/: route.ts
app/app/api/x/start/: route.ts
app/app/create/: page.tsx
app/app/profile/: page.tsx
app/public/: agentgrind-readme.txt  agentgrind.mjs  skill.md
cli/: agentgrind.sh
programs/agentgrind/: Cargo.toml  DESIGN.md
programs/agentgrind/src/: errors.rs  lib.rs  state.rs
programs/agentgrind/src/instructions/: abandon_claim.rs  approve_and_pay.rs  cancel_bounty.rs  claim_bounty.rs  create_bounty.rs  finalize_bounty.rs  init_profile.rs  link_x.rs  mod.rs  reject_bounty.rs  submit_proof.rs
tests/: agentgrind-program.ts
