[package]
name = "agentgrind"
version = "0.1.0"
description = "AgentGrind: Trustless bounty escrow for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentgrind"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[dev-dependencies]
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
